[Failing only on test] Balancer may reuse shards on different migrations on the same round

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Catalog and Routing
    • Fully Compatible
    • ALL
    • CAR Team 2024-04-15
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When fpBalancerShouldReturnRandomMigrations failpoint is enabled (which happens in all of `._with_balancer.` suites), we may select a migration for an unsharded collection without removing the involved shards from the availableShards list. Therefore, we will probably use the same shards to migrate chunks on the same balancer round.

      This is only happening on our tests because the failpoint is only enabled there.

            Assignee:
            Pol Pinol
            Reporter:
            Silvia Surroca
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: