SERVER-87018 Don't re-use shards on different migrations on the same round (#20651)

GitOrigin-RevId: ea47e1905f96352e3542d1f141a7f34f5fbf3209